fixed alignment on projects page

--- a/styles/projects.css
+++ b/styles/projects.css
@@ -1,5 +1,4 @@
 #article-1 {
-    font-size: 100px;
     color: white;
     font-weight: 600;
 }
